Mon Oct 20 00:57:04 2008  Tanaka Akira  <akr@fsij.org>

	* lib/test/unit.rb (Test::Unit.setup_argv): call given block for
	  filtering files.

	* test/runner.rb: search srcdir/test/arg, srcdir/arg.

	* bin/testrb: show usage if no files given.
	
Sun Oct 19 21:19:16 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (srcs): removed ID_H_TARGET.

	* tool/generic_erb.rb: always overwrites if no if-change option.
	  sends the result to stdout if no output option.

	* template/id.h.tmpl: shows which token differs.

Sun Oct 19 18:15:15 2008  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/trans/single_byte.trans: adding WINDOWS-wwww encodings
	  (wwww = 874/1250/1251/1253/1254/1255/1256/1257)
	  (contributed by Yoshihiro Kambayashi)

	* enc/trans/windows-wwww-tbl.rb: 8 new files
	  (contributed by Yoshihiro Kambayashi)

	* test/ruby/test_transcode.rb: added test_windows_wwww
	  (contributed by Yoshihiro Kambayashi)

Sun Oct 19 07:37:13 2008  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/cmath.rb (log2,cbrt,frexp,ldexp,hypot,erf,erfc,gamma,lgamma):
	  should be also provided as module function.  [ruby-dev:36787]

Sun Oct 19 07:25:08 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* keywords, lex.c.src, opt_insn_unif.def, opt_operand.def: moved rarely changed
	  input files for code generators into defs/ directory.

	* Makefile.in (lex.c): followed keywords and lex.c.src.

	* common.mk (parser.o): followed keywords.
	  (INSNS): followed opt_*.def

	* tools/instruction.rb: followed opt_*.def.

Sun Oct 19 12:28:01 2008  James Edward Gray II  <jeg2@ruby-lang.org>

	* test/csv/*:  Renamed tc_* files to test_* to fit in within Ruby's
	  testing process.

Sun Oct 19 00:15:03 2008  Tanaka Akira  <akr@fsij.org>

	* lib/test/unit.rb (assert_nothing_thrown): don't intern.

Sat Oct 18 14:40:32 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* numeric.c (num_sadded): remove newly defined singleton method
	  that should not exist after exception handling.  [ruby-dev:36569]
